--- a/README.adoc
+++ b/README.adoc
@@ -2,9 +2,16 @@
 :toc:
 :toc-placement: preamble
 :functionalversion: 0.7.0
+ifdef::env-github,env-gitbucket[:outfilesuffix: .adoc]
+ifndef::env-asciidoclet[:srcdir: src/main/java/]
+ifdef::env-asciidoclet[:srcdir:]
+ifndef::env-asciidoclet[:javasuffix: .java]
+ifdef::env-asciidoclet[:javasuffix: .html]
 
+ifdef::env-github[]
 image:https://travis-ci.org/ToToTec/de.tototec.utils.functional.svg?branch=master["Build Status", link="https://travis-ci.org/ToToTec/de.tototec.utils.functional"]
 image:https://img.shields.io/codacy/d6a2164c269d4a0a8245c12de43c5736.svg["Codacy Badge", link="https://www.codacy.com/p/3188/dashboard"]
+endif::[]
 
 This project consists of some useful helper classes and interfaces, which help to write more functional Java code.
 
@@ -14,12 +21,12 @@ This project consists of some useful helper classes and interfaces, which help t
 
 The classes are:
 
-* link:src/main/java/de/tototec/utils/functional/FList.java[`FList`] - contains static methods returning mostly `java.util.List` s and accepting `Iterable` s and arrays, like `map`, `flatMap`, `filter`, ...
-* link:src/main/java/de/tototec/utils/functional/F0.java[`F0`], link:src/main/java/de/tototec/utils/functional/F1.java[`F1`], link:src/main/java/de/tototec/utils/functional/F2.java[`F2`], ... - Interfaces representing a function with n args where n is already in the name
-* link:src/main/java/de/tototec/utils/functional/Procedure0.java[`Procedure0`], link:src/main/java/de/tototec/utils/functional/Procedure1.java[`Procedure1`], link:src/main/java/de/tototec/utils/functional/Procedure2.java[`Procedure2`] - Interfaces representing a procedure with n args where n is given by the name
-* link:src/main/java/de/tototec/utils/functional/Optional.java[`Optional`] - An immutable class representing an optional value
-* link:src/main/java/de/tototec/utils/functional/Either.java[`Either`] - An immutable class representing either one of two values
-* link:src/main/java/de/tototec/utils/functional/Tuple2.java[`Tuple2`], link:src/main/java/de/tototec/utils/functional/Tuple3.java[`Tuple3`], ... - Classes representing tuples with n args where n is given by the name
+* link:{srcdir}de/tototec/utils/functional/FList{javasuffix}[`FList`] - contains static methods returning mostly `java.util.List` s and accepting `Iterable` s and arrays, like `map`, `flatMap`, `filter`, ...
+* link:{srcdir}de/tototec/utils/functional/F0{javasuffix}[`F0`], link:{srcdir}de/tototec/utils/functional/F1{javasuffix}[`F1`], link:{srcdir}de/tototec/utils/functional/F2{javasuffix}[`F2`], ... - Interfaces representing a function with n args where n is already in the name
+* link:{srcdir}de/tototec/utils/functional/Procedure0{javasuffix}[`Procedure0`], link:{srcdir}de/tototec/utils/functional/Procedure1{javasuffix}[`Procedure1`], link:{srcdir}de/tototec/utils/functional/Procedure2{javasuffix}[`Procedure2`] - Interfaces representing a procedure with n args where n is given by the name
+* link:{srcdir}de/tototec/utils/functional/Optional{javasuffix}[`Optional`] - An immutable class representing an optional value
+* link:{srcdir}de/tototec/utils/functional/Either{javasuffix}[`Either`] - An immutable class representing either one of two values
+* link:{srcdir}de/tototec/utils/functional/Tuple2{javasuffix}[`Tuple2`], link:{srcdir}de/tototec/utils/functional/Tuple3{javasuffix}[`Tuple3`], ... - Classes representing tuples with n args where n is given by the name
 
 All those classes and interfaces can be used with Java 5 and above. Although by their use, your code will not get more compact, but hopefully less errorprone.
 
@@ -146,7 +153,7 @@ This can be achieved with the http://mojo.codehaus.org/animal-sniffer-maven-plug
 
 == Changelog
 
-==== 0.7.0 - 2016-06-01
+=== 0.7.0 - 2016-06-01
 
 * Fixed faulty FList.distict method
 * Added no-op impls for Procedure interfaces
