Deprecated Optional.lift

--- a/README.adoc
+++ b/README.adoc
@@ -190,6 +190,7 @@ This can be achieved with the http://mojo.codehaus.org/animal-sniffer-maven-plug
 * Added `Optional.of` as a preferred alternative to `Optional.lift`
 * Added `Procedure4`
 * Added more `FList.toHashMap` variants
+* Deprecated `Optional.lift` in favour of `Optional.of`
 
 === 1.0.0 - 2017-12-14
 
