--- a/README.adoc
+++ b/README.adoc
@@ -120,6 +120,9 @@ Functional Utils is available from http://search.maven.org/#search|gav|1|g%3A%22
 "mvn:de.tototec:de.tototec.utils.functional:{functionalversion}"
 ----
 
+== Documentation
+
+* https://ToToTec.github.io/de.tototec.utils.functional/apidocs/{functionalversion}[Javadoc]
 
 == Use with Java 8 Lambdas
 
