--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 = Functional Utils
 :toc:
 :toc-placement: preamble
-:functionalversion: 2.2.0
+:functionalversion: 2.3.0
 ifdef::env-github,env-gitbucket[:outfilesuffix: .adoc]
 ifndef::env-asciidoclet[:srcdir: src/main/java/]
 ifdef::env-asciidoclet[:srcdir:]
@@ -187,6 +187,10 @@ This can be achieved with the http://mojo.codehaus.org/animal-sniffer-maven-plug
 ----
 
 == Changelog
+
+=== 2.3.0 - 2021-11-23
+
+* Added more functions to `Either` and make it right-biased
 
 === 2.2.0 - 2021-11-04
 
